@@ -49,5 +49,6 @@ int commGenSignConf(char* zone_name, int zone_id, char* current_filename, KSM_PO
 int commKeyConfig(void* context, KSM_KEYDATA* key_data);
 int allocateKeysToZone(KSM_POLICY *policy, int key_type, int zone_id, uint16_t interval, const char* zone_name);
 int read_zonelist_filename(const char* filename, char** zone_list_filename);
+int do_purge(int interval, int policy_id);
 
 #endif /* ENFORCER_H */
